dev: fix className overlap

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -372,7 +372,7 @@ h2 {
     }
   }
 }
-.about {
+.pageAbout {
   max-width: 1800px;
   margin: 0 auto;
   .aboutImage {
